<resources>
    <string name="app_name">Bhagavad Geeta</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="verse_of_the_day">VERSE OF THE DAY</string>
    <string name="dummy_verse">The sixth chapter of the Bhagavad Gita is Dhyana Yoga. In this chapter, Krishna reveals the Yoga of Meditation and how to practise this Yoga. He discusses the role of action in preparing for Meditation, how performing duties in devotion purifies one\'s mind and heightens one\'s spiritual consciousness. He explains in detail the obstacles that one faces when trying to control their mind and the exact methods by which one can conquer their mind. He reveals how one can focus their mind on Paramatma and unite with the God.</string>
    <string name="last_read">Last Read</string>
    <string name="continue_reading">Continue Reading</string>
    <string name="chapters">Chapters</string>
    <string name="loading">Loading…</string>
    <string name="aa">Aa</string>
    <string name="view_all_verse">View All Verse</string>
    <string name="next">Next</string>
    <string name="hindi">Hindi</string>
    <string name="english">English</string>
    <string name="translation">Translation</string>
    <string name="transliteration">Transliteration</string>
    <string name="translation_by_different_authors">Translation by Different Authors</string>
    <string name="home">Home</string>
    <string name="liked">Liked</string>
    <string name="like">Like</string>
    <string name="download">Download</string>
    <string name="no_items_in_saved_please_add_some">No items in Saved! Please Add some…</string>
    <string name="saved">Saved</string>
    <string name="read_this">Read this</string>
    <string name="random_verse">Random Verse</string>
</resources>