<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <import type="android.view.View" />

        <variable
            name="isDataAvailable"
            type="boolean" />

        <variable
            name="isLastReadAvailable"
            type="boolean" />

        <variable
            name="slokData"
            type="com.example.bhagavadgitaapp.data.local.HomeScreenLocal" />

        <variable
            name="viewModel"
            type="com.example.bhagavadgitaapp.ui.viewmodel.HomeScreenViewModel" />
    </data>
    <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:paddingHorizontal="@dimen/_16dp"
        tools:context=".ui.fragment.FragmentHomeScreen">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <com.facebook.shimmer.ShimmerFrameLayout
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/shimmerLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:visibility="gone"
                android:orientation="vertical"
                >

                <!-- Adding 7 rows of placeholders -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <include layout="@layout/data_placeholder_layout_home" />

                    <include layout="@layout/data_placeholder_layout_chapter" />
                    <include layout="@layout/data_placeholder_layout_chapter" />
                    <include layout="@layout/data_placeholder_layout_chapter" />
                    <include layout="@layout/data_placeholder_layout_chapter" />
                    <include layout="@layout/data_placeholder_layout_chapter" />
                    <include layout="@layout/data_placeholder_layout_chapter" />
                </LinearLayout>

            </com.facebook.shimmer.ShimmerFrameLayout>

            <androidx.cardview.widget.CardView
                android:layout_marginTop="@dimen/_16dp"
                android:id="@+id/verseOfTheDayCard"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:visibility="@{isDataAvailable ? View.VISIBLE : View.INVISIBLE }"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/_10dp"
                >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:background="@drawable/card_bg"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/cardTitle"
                        android:paddingHorizontal="@dimen/_16dp"
                        android:paddingTop="@dimen/_16dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/verse_of_the_day"
                        style="@style/textTitle"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        />

                    <TextView
                        android:id="@+id/verse"
                        android:paddingHorizontal="@dimen/_16dp"
                        app:layout_constraintTop_toBottomOf="@id/cardTitle"
                        android:layout_marginTop="@dimen/_16dp"
                        android:textColor="@color/white"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:textStyle="bold"
                        android:maxLines="4"
                        android:textSize="@dimen/_14sp"
                        android:paddingBottom="@dimen/_16dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{ slokData.userSelectedLanguageSlok }"
                        tools:text="@string/dummy_verse" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvLastRead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/last_read"
                android:visibility="@{ isLastReadAvailable ? View.VISIBLE : View.GONE }"
                app:layout_constraintTop_toBottomOf="@id/verseOfTheDayCard"
                android:text="@{ isDataAvailable ?  @string/last_read : `` }"
                style="@style/textTitle"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/_16dp"
                />

            <TextView
                android:id="@+id/tvLastReadVerse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="@{ (isLastReadAvailable  &amp;&amp;  isDataAvailable) ? View.VISIBLE : View.GONE }"
                tools:text="@string/dummy_verse"
                android:text="@{ slokData.lastReadUserLanguage }"
                app:layout_constraintTop_toBottomOf="@id/tvLastRead"
                android:layout_marginTop="@dimen/_16dp"/>

            <Button
                android:id="@+id/btnContinueReading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                tools:text="@string/continue_reading"
                android:visibility="@{ isLastReadAvailable ? View.VISIBLE : View.GONE }"
                android:text="@{ isDataAvailable ? @string/continue_reading : `` }"
                app:layout_constraintTop_toBottomOf="@id/tvLastReadVerse"
                android:textColor="@color/primaryColor"
                android:backgroundTint="@android:color/transparent"
                android:padding="@dimen/_0dp"
                app:layout_constraintStart_toStartOf="parent"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvChapters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{ isDataAvailable ? @string/chapters : `` }"
                style="@style/textTitleBlack"
                app:layout_constraintTop_toBottomOf="@id/btnContinueReading"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/_16dp"/>

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btnFliter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="@{ isDataAvailable ? View.VISIBLE : View.GONE }"
                android:backgroundTint="@android:color/transparent"
                android:src="@drawable/baseline_sort_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvChapters"
                app:layout_constraintBottom_toBottomOf="@id/tvChapters"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvChapter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/tvChapters"
                android:layout_marginTop="@dimen/_16dp"
                android:nestedScrollingEnabled="false" />

        </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
</layout>